k8s-configuration-from-hub/analytics-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  labels:
    app: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      name: analytics
      labels:
        app: analytics
    spec:
      containers:
        - name: analytics
          image: daimonix/modulith-booking-analytics
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: analytics
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
