k8s-configuration-from-hub/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: bookingapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics
                port:
                  number: 8081
